Fix alignment of contacts

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,10 @@ header {
     flex-flow: column wrap;
 }
 
+header > * {
+    border: 1px solid red;
+}
+
 .logo,
 .contacts {
     flex: 1;
@@ -54,9 +58,10 @@ header {
 }
 
 .contacts {
+    width: 150px;
     padding: 10px 10px 0;
-    text-align: right;
     line-height: 20px;
+    align-self: flex-end;
 }
 
 .countries {
